2008-12-16  Stefan Kost  <ensonic@users.sf.net>

	* gst/gsttaglist.c:
	* tests/check/gst/gsttag.c:
	  More complete unit tests. Fix handling of empty taglists (they were
	  not merged before).

2008-12-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/gsttaglist.h:
	* gst/gsttagsetter.c:
	  Update GstTagSetter and GstTagMergeMode documentation. Mention
	  that tags can come from events and from application. Fix example.

2008-12-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-TODO.txt:
	Remove the seqnum entry that we implemented in 0.10 already.
	Add entry about removing the format return value for queries.

2008-12-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_class_init),
	(gst_base_sink_init), (gst_base_sink_set_property),
	(gst_base_sink_get_property):
	Expose the render-delay as a property so things like appsink can use it
	to tweak the synchronisation.

2008-12-10  Peter Kjellerstedt  <pkj@axis.com>

	* libs/gst/check/gstcheck.h: Allow check tests to use
	MAIN_START_THREADS()/MAIN_STOP_THREADS() multiple times. Also allows
	CK_FORK=no to be used with multiple check test that use threads.

2008-12-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstutils.c: (gst_element_get_compatible_pad):
	Fix a caps memory leak introduced by the last change.

2008-12-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstutils.c: (gst_element_get_compatible_pad):
	Check if the caps of the pads are compatible before returning
	a pad and claiming it is compatible. This, among other things,
	fixes a bug with gst-launch where an incompatible pad is chosen
	and linking fails. Fixes bug #544003.

2008-12-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/check/gstcheck.c: (gst_check_init):
	Revert accidentially commited patch for bug #404631 which
	tries to print a backtrace if a testcase is terminated by
	a signal. This code was never activated as the corresponding