@@ -1,6 +1,11 @@
 2008-12-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* gst/gsttaglist.c:
+	  Avoid copy of empty taglist.
+
+2008-12-16  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gsttaglist.c:
 	* tests/check/gst/gsttag.c:
 	  More complete unit tests. Fix handling of empty taglists (they were
 	  not merged before).
